--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,8 @@
     </style>
 
     <style name="Theme.Cineflix" parent="Base.Theme.Cineflix" />
+    <style name="ShapeAppearanceOverlay.App.circleImageView" parent="" >
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">15dp</item>
+    </style>
 </resources>
