--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -127,7 +127,8 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.0" />
+                    android:orientation="horizontal"
+                    app:layout_constraintVertical_bias="0.0"/>
 
                 <ProgressBar
                     android:id="@+id/progressBar"
@@ -182,6 +183,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
+                android:scrollHorizontally="true"
                 android:text="Popular"
                 android:textColor="@android:color/white"
                 android:textSize="18dp"
