--- a/app/src/main/res/layout/slide_item_container.xml
+++ b/app/src/main/res/layout/slide_item_container.xml
@@ -1,28 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="150dp"
+    android:layout_height="wrap_content"
+    android:paddingEnd="20dp"
+    >
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/imagePoster"
+        style="@style/ShapeAppearanceOverlay.App.circleImageView"
         android:layout_width="140dp"
         android:layout_height="180dp"
-        android:scaleType="center"
+        android:scaleType="centerCrop"
         android:src="@drawable/account"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-    </ImageView>
+    </com.google.android.material.imageview.ShapeableImageView>
 
     <TextView
         android:id="@+id/textView10"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView"
+        android:maxLines="1"
+
         app:layout_constraintEnd_toEndOf="@+id/imagePoster"
         app:layout_constraintStart_toStartOf="@+id/imagePoster"
         app:layout_constraintTop_toBottomOf="@+id/imagePoster" />
