--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -217,6 +217,13 @@
                     app:layout_constraintStart_toStartOf="@id/view3"
                     app:layout_constraintTop_toTopOf="@+id/view3" />
             </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="wrap_content"
+                android:layout_height="100dp"
+                tools:layout_editor_absoluteX="13dp"
+                tools:layout_editor_absoluteY="142dp">
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
     </ScrollView>
 
