--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,4 +15,8 @@
         <item name="android:statusBarColor" >@android:color/transparent</item>
         <item name="android:windowTranslucentStatus">true</item>
     </style>
+
+    <style name="ShapeAppearanceOverlay.App.rounded50" parent="">
+        <item name="cornerSize">50%</item>
+    </style>
 </resources>
