--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -24,7 +24,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/movieTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -37,14 +37,14 @@
             app:layout_constraintTop_toBottomOf="@+id/videoView" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/movieYear"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="16dp"
             android:text="year"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView6" />
+            app:layout_constraintTop_toBottomOf="@+id/movieTitle" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/playBtn"
@@ -65,7 +65,7 @@
             app:iconTint="@android:color/black"
             app:iconGravity="textStart"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+            app:layout_constraintTop_toBottomOf="@+id/movieYear" />
 
         <com.google.android.material.button.MaterialButton
             app:cornerRadius="10dp"
@@ -89,7 +89,7 @@
             app:layout_constraintTop_toBottomOf="@+id/playBtn" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/movieOverview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -102,14 +102,14 @@
             app:layout_constraintTop_toBottomOf="@+id/saveBtn" />
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/movieActor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
             android:text="Actor list"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView8" />
+            app:layout_constraintTop_toBottomOf="@+id/movieOverview" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
