style: make status bar transparent

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,6 +2,8 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.Cineflix" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowTranslucentStatus">true</item>
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
@@ -14,9 +16,5 @@
     <style name="TransparentStatusBarTheme" parent="Base.Theme.Cineflix" >
         <item name="android:statusBarColor" >@android:color/transparent</item>
         <item name="android:windowTranslucentStatus">true</item>
-    </style>
-
-    <style name="ShapeAppearanceOverlay.App.rounded50" parent="">
-        <item name="cornerSize">50%</item>
     </style>
 </resources>
