feat: add Exoplayer & use ophim api

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="bottom_bar">#648C84</color>
     <color name="shimmerColor">#455145</color>
+    <color name="red">#AF2117</color>
 </resources>
