--- a/app/src/main/res/layout/activity_movie_player.xml
+++ b/app/src/main/res/layout/activity_movie_player.xml
@@ -1,24 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:screenOrientation="landscape"
-    tools:context=".View.Activities.MoviePlayerActivity">
-    <WebView
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".View.Activities.MoviePlayerActivity"
+    android:orientation="vertical">
+
+    <com.google.android.exoplayer2.ui.PlayerView
+        android:id="@+id/video_view"
+        android:background="@android:color/black"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/web_view"/>
+        app:surface_type="surface_view"
+        app:use_controller="true"
+        app:controller_layout_id="@layout/custom_video_player"
+        >
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="invisible" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/results_rc"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginBottom="25dp" />
+    </com.google.android.exoplayer2.ui.PlayerView>
+    <include layout="@layout/custom_video_player"
+        android:visibility="gone"
+        android:id="@+id/video_view2"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
