--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,4 +17,11 @@
         <item name="android:statusBarColor" >@android:color/transparent</item>
         <item name="android:windowTranslucentStatus">true</item>
     </style>
+
+    <style name="MyRipple">
+        <item name="colorControlHighlight">@color/ripple_color</item>
+        <item name="android:background">?attr/selectableItemBackground</item>
+    </style>
+
+    <color name="ripple_color">#9C9595</color>
 </resources>
