--- a/app/src/main/res/drawable/gradient_color_bg.xml
+++ b/app/src/main/res/drawable/gradient_color_bg.xml
@@ -3,9 +3,9 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#434A33"
-                android:centerColor="#031b13"
-                android:endColor="#031b13"
+                android:startColor="#4A3333"
+                android:centerColor="#1B0303"
+                android:endColor="#210A0A"
                 android:type="radial"
                 android:gradientRadius="110%p"
                 android:centerX="1"
@@ -16,7 +16,7 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#1A4438"
+                android:startColor="#3714"
                 android:centerColor="@android:color/transparent"
                 android:endColor="@android:color/transparent"
                 android:type="radial"
