--- a/app/src/main/res/drawable/gradient_color_bg.xml
+++ b/app/src/main/res/drawable/gradient_color_bg.xml
@@ -3,8 +3,8 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#4A3333"
-                android:centerColor="#1B0303"
+                android:startColor="#BE6161"
+                android:centerColor="#521515"
                 android:endColor="#210A0A"
                 android:type="radial"
                 android:gradientRadius="110%p"
@@ -16,7 +16,7 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#3714"
+                android:startColor="#741913"
                 android:centerColor="@android:color/transparent"
                 android:endColor="@android:color/transparent"
                 android:type="radial"
