--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,11 +22,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:background="#0F0101"
+        android:background="#230503"
         app:menu="@menu/bottom_nav_menu"
-        app:itemActiveIndicatorStyle="@android:color/transparent"
-        app:itemIconTint="@color/bottom_bar"
-        app:itemTextColor="@color/bottom_bar">
+        app:itemActiveIndicatorStyle="@style/App.Custom.Indicator"
+        app:itemIconTint="@android:color/white"
+        app:itemTextColor="@android:color/white">
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
