--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -60,7 +60,7 @@
                 android:layout_marginEnd="20dp"
                 android:paddingHorizontal="20dp"
                 android:paddingVertical="12dp"
-                android:text="Play"
+                android:text="Xem Ngay"
                 android:textColor="@android:color/black"
                 android:textSize="16dp"
                 android:textStyle="bold"
@@ -81,7 +81,7 @@
                 android:layout_marginEnd="20dp"
                 android:paddingHorizontal="20dp"
                 android:paddingVertical="12dp"
-                android:text="My List"
+                android:text="Danh Sách"
                 android:textColor="@android:color/white"
                 android:textSize="16dp"
                 android:textStyle="bold"
@@ -101,7 +101,8 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
                 android:maxLines="5"
-                android:text="Movie overview : Bộ phim kể về nguồn gốc của một đồng minh Người Nhện, một nhân vật trong truyện tranh Marvel có sức mạnh liên kết đa vũ trụ - Cassandra Webb (Dakota Johnson) hay còn được biết đến là Madame Web. Sở hữu khả năng và giác quan nhạy bén của loài nhện, Cassandra có khả năng thấu thị, thần giao cách cảm và nhìn trước tương lai. Chính từ đây mà số phận của cô ấy trở nên gắn bó một cách bí ẩn với ba cô gái khác là Julia Carpenter (Sydney Sweeney), Anya Corazon (Isabela Merced) và Mattie Franklin (Celeste O'Connor) - những người được dự đoán là thế hệ tương lai của Người Nhện. "
+                android:ellipsize="end"
+                android:text="Đang câpj nhật ..."
                 android:textColor="@android:color/white"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/saveBtn" />
@@ -113,7 +114,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginTop="20dp"
-                android:text="Diễn viên : ... jkfbajbfjabjfbajkfbjafbjkabfjabjfbajfbjafbjabfjkafbjvsddv"
+                android:text="Diễn viên : Đang cập nhật... "
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/movieOverview" />
 
