--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -77,7 +77,7 @@
                     android:background="@drawable/white_btn"
                     android:drawableStart="@drawable/play"
                     android:paddingHorizontal="30dp"
-                    android:text="Play"
+                    android:text="Phát"
                     android:textSize="16dp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView5"
@@ -93,7 +93,7 @@
                     android:background="@drawable/gray_btn"
                     android:drawableStart="@drawable/add"
                     android:paddingHorizontal="30dp"
-                    android:text=" My List"
+                    android:text=" Thêm"
                     android:textColor="@android:color/white"
                     android:textSize="16dp"
                     android:textStyle="bold"
