--- a/app/src/main/res/layout/activity_movie_player.xml
+++ b/app/src/main/res/layout/activity_movie_player.xml
@@ -7,24 +7,111 @@
     tools:context=".View.Activities.MoviePlayerActivity"
     android:orientation="vertical">
 
-    <com.google.android.exoplayer2.ui.PlayerView
-        android:id="@+id/video_view"
-        android:background="@android:color/black"
+    <FrameLayout
+        android:id="@+id/main_player"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:surface_type="surface_view"
-        app:use_controller="true"
-        app:controller_layout_id="@layout/custom_video_player"
-        >
+        android:layout_height="match_parent">
+        <com.google.android.exoplayer2.ui.PlayerView
+            android:id="@+id/video_view"
+            android:background="@android:color/black"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:surface_type="surface_view"
+            app:use_controller="true"
+            app:controller_layout_id="@layout/custom_video_player"
+            app:show_buffering="always"
+            >
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="invisible" />
+        </com.google.android.exoplayer2.ui.PlayerView>
 
-        <ProgressBar
-            android:id="@+id/progressBar"
+        <LinearLayout
+            android:id="@+id/videoView_two_layout"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:visibility="invisible" />
+            android:layout_height="180dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginLeft="30dp"
+            android:orientation="vertical"
+            android:visibility="gone"
+            android:layout_gravity="center_vertical"
+            tools:visibility="visible"
+            >
 
-    </com.google.android.exoplayer2.ui.PlayerView>
+
+            <ImageView
+                android:id="@+id/videoView_brightness_image"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginStart="2dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginBottom="7dp"
+                android:layout_weight="0"
+                android:src="@drawable/netflix_brightness_four" />
+
+            <SeekBar
+                android:id="@+id/videoView_brightness"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="-50dp"
+                android:layout_marginEnd="-50dp"
+                android:layout_weight="1"
+                android:max="255"
+                android:progress="150"
+                android:progressBackgroundTint="@android:color/white"
+                android:progressTint="@color/red"
+                android:rotation="270"
+                android:scaleY="3"
+                android:thumb="@null"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/volume_ll"
+            android:layout_width="wrap_content"
+            android:layout_height="180dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginLeft="30dp"
+            android:orientation="vertical"
+            android:visibility="gone"
+            android:layout_gravity="center_vertical|end"
+            tools:visibility="visible"
+            >
+
+
+            <ImageView
+                android:id="@+id/volume_image"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginStart="2dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginBottom="7dp"
+                android:layout_weight="0"
+                android:src="@drawable/volume_up_24" />
+
+            <SeekBar
+                android:id="@+id/volume_seek"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="-50dp"
+                android:layout_marginEnd="-30dp"
+                android:layout_weight="1"
+                android:max="255"
+                android:progress="150"
+                android:progressBackgroundTint="@android:color/white"
+                android:progressTint="@color/red"
+                android:rotation="270"
+                android:scaleY="3"
+                android:thumb="@null"
+                />
+
+        </LinearLayout>
+    </FrameLayout>
+    
+
+
     <include layout="@layout/custom_video_player"
         android:visibility="gone"
         android:id="@+id/video_view2"/>
