style: hide play/pause button when buffering

--- a/app/src/main/res/drawable/netflix_brightness_three.xml
+++ b/app/src/main/res/drawable/netflix_brightness_three.xml
@@ -21,13 +21,13 @@
     <path
         android:fillColor="#FFF"
         android:pathData="M258.4,44.4c-4,-4 -10.4,-4 -14.4,0l-22,22c-4,4 -4,10.4 0,14.4c3.6,4 10.4,4 14.4,0l22,-22C262.4,54.8 262.4,48.4 258.4,44.4z"/>
-    <path
-        android:fillColor="#FFF"
-        android:pathData="M41.2,140.8H10.4c-5.6,0 -10.4,4.8 -10.4,10.4s4.4,10.4 10.4,10.4h30.8c5.6,0 10.4,-4.8 10.4,-10.4C51.6,145.6 46.8,140.8 41.2,140.8z"/>
+<!--    <path-->
+<!--        android:fillColor="#FFF"-->
+<!--        android:pathData="M41.2,140.8H10.4c-5.6,0 -10.4,4.8 -10.4,10.4s4.4,10.4 10.4,10.4h30.8c5.6,0 10.4,-4.8 10.4,-10.4C51.6,145.6 46.8,140.8 41.2,140.8z"/>-->
     <path
         android:fillColor="#FFF"
         android:pathData="M80.4,221.6c-3.6,-4 -10.4,-4 -14.4,0l-22,22c-4,4 -4,10.4 0,14.4s10.4,4 14.4,0l22,-22C84.4,232 84.4,225.6 80.4,221.6z"/>
-    <path
-        android:fillColor="#FFF"
-        android:pathData="M80.4,66.4l-22,-22c-4,-4 -10.4,-4 -14.4,0s-4,10.4 0,14.4l22,22c4,4 10.4,4 14.4,0S84.4,70.4 80.4,66.4z"/>
+<!--    <path-->
+<!--        android:fillColor="#FFF"-->
+<!--        android:pathData="M80.4,66.4l-22,-22c-4,-4 -10.4,-4 -14.4,0s-4,10.4 0,14.4l22,22c4,4 10.4,4 14.4,0S84.4,70.4 80.4,66.4z"/>-->
 </vector>
