feat: add double tap to change duration

--- a/app/src/main/res/layout/custom_video_player.xml
+++ b/app/src/main/res/layout/custom_video_player.xml
@@ -230,6 +230,8 @@
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:padding="10dp"
+                android:visibility="gone"
+                tools:visibility="visible"
                 >
 
 
@@ -297,6 +299,8 @@
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:padding="10dp"
+                android:visibility="gone"
+                tools:visibility="visible"
                 >
 
 
