--- a/app/src/main/res/layout/activity_tv_details.xml
+++ b/app/src/main/res/layout/activity_tv_details.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".View.Activities.TvDetailsActivity"
     android:background="#141414">
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -124,7 +124,7 @@
             </LinearLayout>
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/playBtn"
+                android:id="@+id/playBtnTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
@@ -177,7 +177,7 @@
                 android:text="Đang câpj nhật ..."
                 android:textColor="@android:color/white"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/playBtn" />
+                app:layout_constraintTop_toBottomOf="@+id/playBtnTV" />
 
             <TextView
                 android:id="@+id/tvActor"
@@ -284,7 +284,9 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/ButtonGroupLL"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintHeight_default="percent"
+                app:layout_constraintHeight_percent="1.0">
                 <com.google.android.material.tabs.TabLayout
                     android:layout_marginHorizontal="20dp"
                     android:id="@+id/tab_layout"
@@ -302,11 +304,12 @@
                 <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/view_pager2"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
                     />
             </LinearLayout>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
