--- a/app/src/main/res/layout/fragment_tv_episode.xml
+++ b/app/src/main/res/layout/fragment_tv_episode.xml
@@ -35,7 +35,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:nestedScrollingEnabled="false" />
+            android:nestedScrollingEnabled="false"
+            />
 
     </LinearLayout>
 
