--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,6 +7,13 @@
          <item name="colorPrimary">@color/red</item>
     </style>
 
+    <style name="SplashScreenTheme" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="colorPrimary">@color/red</item>
+    </style>
+
     <style name="Theme.Cineflix" parent="Base.Theme.Cineflix" />
     <style name="ShapeAppearanceOverlay.App.circleImageView" parent="" >
         <item name="cornerFamily">rounded</item>
